--- a/findly-builder/src/assets/i18n/en.json
+++ b/findly-builder/src/assets/i18n/en.json
@@ -27,5 +27,7 @@
     "rename":"Rename",
     "copy":"Copy",
     "remove":"Remove",
-    "choose_an_option":"Choose an option"
+    "choose_an_option":"Choose an option",
+    "count":"Count",
+    "label":"Label"
 }
