--- a/findly-builder/src/assets/i18n/en.json
+++ b/findly-builder/src/assets/i18n/en.json
@@ -32,5 +32,6 @@
     "label":"Label",
     "page":"Page",
     "faq":"FAQ",
-    "content":"Content"
+    "content":"Content",
+    "semantic_meaning":"Sematic Meaning"
 }
