--- a/findly-builder/src/assets/i18n/en.json
+++ b/findly-builder/src/assets/i18n/en.json
@@ -33,5 +33,36 @@
     "page":"Page",
     "faq":"FAQ",
     "content":"Content",
-    "semantic_meaning":"Sematic Meaning"
+    "semantic_meaning":"Sematic Meaning",
+    "address":"Address",
+    "airport":"Airport",
+    "attachment":"Attachment(Image / File)",
+    "city":"City",
+    "country":"Country",
+    "company_name":"Company Name or Organization Name",
+    "color":"Color",
+    "currency":"Currency(Deprecated)",
+    "currencyv2":"Currency",
+    "regex":"Custom",
+    "composite":"Composite",
+    "date":"Date",
+    "dateperiod":"Date Period",
+    "datetime":"Date Time",
+    "description":"dDscription",
+    "email":"Email",
+    "list_of_values":"List of items (enumerated)",
+    "list_of_items_lookup":"List of items (lookup)",
+    "location":"Location",
+    "person_name":"Person Name",
+    "percentage":"Percentage",
+    "phone_number":"Phone Number",
+    "quantityv2":"Quantity",
+    "label":"String",
+    "timezone":"Time Zone",
+    "time":"Time",
+    "url":"URL",
+    "zipcode":"Zip Code",
+    "from_number":"From - number(minimum of a range)(Deprecated)",
+    "to_number":"To - number(maximum of a range, limit)(Deprecated)",
+    "quantity":"Quantity(Deprecated)"
 }
