--- a/findly-builder/src/assets/i18n/en.json
+++ b/findly-builder/src/assets/i18n/en.json
@@ -69,5 +69,8 @@
     "trait":"Trait",
     "entity":"Entity",
     "keyword":"Keyword",
-    "denseVector":"Dense Vector"
+    "denseVector":"Dense Vector",
+    "topic_rank":"Topic Rank",
+    "position_rank":"Position Rank",
+    "multipartite_rank":"Multipartite Rank"
 }
