--- a/findly-builder/src/assets/i18n/en.json
+++ b/findly-builder/src/assets/i18n/en.json
@@ -27,6 +27,8 @@
     "rename":"Rename",
     "copy":"Copy",
     "remove":"Remove",
+    "value":"Value",
+    "range":"Range",
     "choose_an_option":"Choose an option",
     "count":"Count",
     "label":"Label",
