--- a/findly-builder/src/assets/i18n/en.json
+++ b/findly-builder/src/assets/i18n/en.json
@@ -83,12 +83,14 @@
         "all_rules_selected":"All Rules Selected",
         "status_caps":"STATUS",
         "outcome_caps":"OUTCOME",
+        "outcome_caps_small":"Outcome",
         "condition_caps":"CONDITION",
         "add_rule":"Add Rule",
         "rule_active":"Rule Active",
         "rule_in_active":"Rule In-Active",
         "rule_name":"Rule Name",
         "condition_desc":"The context of this section as to when the trigger takes place.",
+        "condition_desc_outcome":"The context of this section as to what happens when the previous conditon is met.",
         "add_condition":"Add Condition",
         "user_context":"User Context",
         "condition":"Condition"
