--- a/findly-builder/src/assets/i18n/en.json
+++ b/findly-builder/src/assets/i18n/en.json
@@ -95,9 +95,9 @@
         "add_condition":"Add Condition",
         "user_context":"User Context",
         "condition":"Condition",
-        "containes":"Containes",
+        "contains":"Contains",
         "equals":"Equals",
-        "doesNotContains":"Does Not Contain",
+        "doesNotContains":"Does Not Contains",
         "notEquals":"Not Equals",
         "recentSearches":"Reacent Searches",
         "currentSearch":"Current Search",
