--- a/findly-builder/src/assets/i18n/en.json
+++ b/findly-builder/src/assets/i18n/en.json
@@ -87,8 +87,10 @@
         "outcome_caps_small":"Outcome",
         "condition_caps":"CONDITION",
         "add_rule":"Add Rule",
+        "In-Active":"Inactive",
+        "active":"Active",
         "rule_active":"Rule Active",
-        "rule_in_active":"Rule In-Active",
+        "rule_in_active":"Rule Inactive",
         "rule_name":"Rule Name",
         "condition_desc":"The context of this section as to when the trigger takes place.",
         "condition_desc_outcome":"The context of this section as to what happens when the previous conditon is met.",
@@ -96,10 +98,10 @@
         "user_context":"User Context",
         "condition":"Condition",
         "contains":"Contains",
-        "equals":"Equals",
-        "doesNotContain":"Does Not Contains",
-        "notEquals":"Not Equals",
-        "recentSearches":"Reacent Searches",
+        "equals":"Is equals to",
+        "doesNotContain":"Does not contain",
+        "notEquals":"Is not equal to",
+        "recentSearches":"Recent Searches",
         "currentSearch":"Current Search",
         "traits":"Traits",
         "entity":"Entity",
@@ -107,11 +109,11 @@
         "device":"Device",
         "browser":"Browser",
         "currentPage":"Current Page",
-        "recentlyPages":"Recently Pages",
+        "recentPages":"Recent Pages",
         "signed":"Signed",
-        "timeDateDay":"Time Date Day",
+        "timeDateDay":"Time,Date,Day",
         "session":"Session",
-        "timeSpentOnThePageSession":"Time Spent On The Page Session",
+        "timeSpentOnThePageSession":"Time Spent On The Page/Session",
         "userType":"User Type",
         "userProfile":"User Profile",
         "age":"Age",
@@ -122,7 +124,7 @@
         "filter":"Filter",
         "actionboost":"Boosting",
         "actionlower":"Lowering",
-        "actionhide":"Hideing",
+        "actionhide":"Hiding",
         "actionfilter":"Filtering",
         "searchContext":"Search Context",
         "pageContext":"Page Context",
