--- a/findly-builder/src/assets/i18n/en.json
+++ b/findly-builder/src/assets/i18n/en.json
@@ -34,7 +34,7 @@
     "page": "Page",
     "faq": "FAQ",
     "content": "Content",
-    "semantic_meaning": "Sematic Meaning",
+    "semantic_meaning": "Semantic Meaning",
     "address": "Address",
     "airport": "Airport",
     "attachment": "Attachment(Image / File)",
