--- a/findly-builder/src/assets/i18n/en.json
+++ b/findly-builder/src/assets/i18n/en.json
@@ -94,9 +94,9 @@
         "add_condition": "Add Condition",
         "user_context": "User Context",
         "condition": "Condition",
-        "containes": "Containes",
+        "contains": "Contains",
         "equals": "Equals",
-        "doesNotContains": "Does Not Contain",
+        "doesNotContain": "Does Not Contain",
         "notEquals": "Not Equals",
         "recentSearches": "Reacent Searches",
         "currentSearch": "Current Search",
