--- a/findly-builder/src/assets/i18n/en.json
+++ b/findly-builder/src/assets/i18n/en.json
@@ -153,7 +153,7 @@
         "no_rankable_field_available": "No Rankable Field Available",
         "please_add_rankable_field": "Please Add Rankable Field",
         "SYSTEM-DEFINED": "SYSTEM-DEFINED",
-        "add_rankable_field": "Add Rankable Field",
+        "add_searchable_field": "Add Searchable Field",
         "save_weights": "Save Weights",
         "weight_name": "Weight Name",
         "description": "Description",
