--- a/findly-builder/src/assets/i18n/en.json
+++ b/findly-builder/src/assets/i18n/en.json
@@ -246,7 +246,7 @@
         "Top_Search_Queries" : "Top Search Queries",
         "Top_Search_Queries_with_No_Result":"Top Search Queries with No Result",
         "Top_Search_Results" : "Top Search Results",
-        "Searched_Intent" :"Searched Intent",
+        "Searched_Intent" :"Search Results",
         "Count" : "Count",
         "Appearances" : "Appearances",
         "Clicks" :"Clicks",
