--- a/findly-builder/src/assets/i18n/en.json
+++ b/findly-builder/src/assets/i18n/en.json
@@ -224,7 +224,7 @@
  },
  "resultRanking":{
      "no_search_results":"No search results",
-     "no._of_customizations_caps":"NO. OF CUSTOMISATIONS",
+     "no._of_customizations_caps":"NO. OF CUSTOMIZATIONS",
      "last_changes_caps":"LAST CHANGES",
      "restore":"Restore",
      "pinned":"pinned",
