--- a/findly-builder/src/assets/i18n/en.json
+++ b/findly-builder/src/assets/i18n/en.json
@@ -238,8 +238,10 @@
         "dashboard":"Dashboard",
         "total_user":"Total Users",
         "total_searches":"Total Searches",
+        "search_trends":"Search Trends",
         "result_rate":"Result Rate",
         "ctr":"CTR",
+        "clicks":"Clicks",
         "avg_click_position" : "Avg. Click Position",
         "searches_with_result" : "Searches with Results",
         "searches_with_click" : "Searches with Clicks",
@@ -251,10 +253,10 @@
         "Appearances" : "Appearances",
         "Clicks" :"Clicks",
         "Avg_Position" : "Avg Position",
-        "Most_Click_Position" : "Most Click Position",
+        "Most_Clicked_Position" : "Most Clicked Position",
         "Feedback" : "Feedback",
         "Number_of_Clicks" : "Number of Clicks",
-        "Feedback_Recieved" :"Feedback Recieved",
+        "Feedback_Received" :"Feedback Received",
         "Useful_Result" : "Useful Result",
         "Not_Useful_Result" : "Not Useful Result"
      },
@@ -272,10 +274,11 @@
      },
      "search_insights" : {
         "Search_Insights" : "Search Insights",
-        "Top_Search_Results" : "Top Search Results",
+        "Top_Search_Queries" : "Top Search Queries",
         "Queries_with_results" : "Queries with results",
         "Queries_without_results" : "Queries without results",
         "Search_Results" : "Search Results",
+        "Searched_Intent":"Searched Intent",
         "Count" : "Count",
         "No_of_Clicks" : "No of Clicks",
         "Search_Queries_for" : "Search Queries for",
