Result Ranking Reset and Default select & Facet fix

--- a/findly-builder/src/assets/i18n/en.json
+++ b/findly-builder/src/assets/i18n/en.json
@@ -226,7 +226,7 @@
      "no_search_results":"No search results",
      "no._of_customizations_caps":"NO. OF CUSTOMIZATIONS",
      "last_changes_caps":"LAST CHANGES",
-     "restore":"Restore",
+     "restore":"Reset",
      "pinned":"pinned",
      "past_action_on_this_item_caps":"PAST ACTION ON THIS ITEM",
      "nothing_in_log_to_display":"Nothing in log to display",
