--- a/findly-builder/src/assets/i18n/en.json
+++ b/findly-builder/src/assets/i18n/en.json
@@ -78,6 +78,8 @@
     "or_caps": "OR",
     "and_caps": "AND",
     "search": "Search",
+    "status_docker" : "Status Docker",
+    "clear_all" : "Clear all",
     "businessRules": {
         "rules_selected": "Rules Selected",
         "all_rules_selected": "All Rules Selected",
