View Full JSON changes.

--- a/findly-builder/src/assets/i18n/en.json
+++ b/findly-builder/src/assets/i18n/en.json
@@ -338,6 +338,7 @@
     "import_done" : "Import Done",
     "notified_when_done" : "You will be notified when the import process is done.",
     "abort" : "Abort",
-    "ok" : "Ok"
+    "ok" : "Ok",
+    "viewJson" : "View Full JSON"
  }
 }
