Business rules updates

--- a/findly-builder/src/assets/i18n/en.json
+++ b/findly-builder/src/assets/i18n/en.json
@@ -131,7 +131,13 @@
         "actionboost": "Boosting",
         "actionlower": "Lowering",
         "actionhide": "Hiding",
-        "actionfilter": "Filtering"
+        "actionfilter": "Filtering",
+        "string":"String",
+        "date":"Date",
+        "number":"Number",
+        "between":"Between",
+        "greaterThan":"Greater Than",
+        "lessThan":"Less Than"
     },
     "synonyms": {
         "please_wait": "Please Wait!",
