Result Ranking & Bug Fixes

--- a/findly-builder/src/assets/i18n/en.json
+++ b/findly-builder/src/assets/i18n/en.json
@@ -236,7 +236,7 @@
  },
  "resultRanking":{
      "no_search_results":"No search results",
-     "no._of_customizations_caps":"NO. OF CUSTOMIZATIONS",
+     "no._of_customizations_caps":"NO. OF CUSTOMISATIONS",
      "last_changes_caps":"LAST CHANGES",
      "restore":"Reset",
      "pinned":"pinned",
