--- a/findly-builder/src/assets/i18n/en.json
+++ b/findly-builder/src/assets/i18n/en.json
@@ -265,7 +265,7 @@
         "Appearances" : "Appearances",
         "Clicks" :"Clicks",
         "Avg_Position" : "Avg Position",
-        "Most_Clicked_Position" : "Most Click Position",
+        "Most_Clicked_Position" : "Most Clicked Position",
         "Feedback" : "Feedback",
         "Number_of_Clicks" : "Number of Clicks",
         "Feedback_Received" :"Feedback Received",
