FLY-1163, FLY-1171, FLY-1170, FLY-1173, FLY-1127.

--- a/findly-builder/src/assets/i18n/en.json
+++ b/findly-builder/src/assets/i18n/en.json
@@ -198,7 +198,7 @@
         "edit_facet":"Edit Facet",
         "deselect":"Deselect",
         "delete_facets":"Delete Facets",
-        "facet_caps_Name":"FACET Name",
+        "facet_caps_Name":"FACET NAME",
         "type_caps":"TYPE",
         "multiselect_caps":"MULTISELECT",
         "no_facets":"No facets",
@@ -214,6 +214,7 @@
         "value":"Value",
         "range":"Range",
         "multi_select":"Multi Select",
+        "multip_select_info" : "to select muliple facets values",
         "range_name":"Range Name (Optional)",
         "from":"From",
         "to":"To",
@@ -227,12 +228,18 @@
         "cancel":"Cancel",
         "delete":"Delete",
         "status":"Status",
+        "status_caps" : "STATUS",
         "enabled_facet":"Facet Active",
         "disabled_facet":"Facet Inactive",
         "active":"Active",
         "inactive":"Inactive",
         "Yes":"Yes",
-        "No":"No"
+        "No":"No",
+        "allow" : "Allow",
+        "do_not_allow" : "Do Not Allow",
+        "sort_by" : "Sort by",
+        "facet_size" : "Facet Size",
+        "facet_size_info" : "Maximum number of facet values to be displayed."
  },
  "resultRanking":{
      "no_search_results":"No search results",
