Business rules issues fixed

--- a/findly-builder/src/assets/i18n/en.json
+++ b/findly-builder/src/assets/i18n/en.json
@@ -99,14 +99,16 @@
         "user_context": "User Context",
         "condition": "Condition",
         "contains": "Contains",
-        "equals": "Is equals to",
-        "doesNotContain": "Does not contain",
-        "notEquals": "Is not equal to",
+        "equals": "Equals To",
+        "doesNotContain": "Does Not Contain",
+        "notEquals": "Not Equals To",
         "recentSearches": "Recent Searches",
         "currentSearch": "Current Search",
         "traits": "Traits",
+        "trait": "Trait",
         "entity": "Entity",
         "keywords": "Keywords",
+        "keyword": "Keyword",
         "device": "Device",
         "browser": "Browser",
         "currentPage": "Current Page",
