StructuredData Enhancements - FLY-1428

--- a/findly-builder/src/assets/i18n/en.json
+++ b/findly-builder/src/assets/i18n/en.json
@@ -384,6 +384,8 @@
     "key_caps" : "KEY",
     "value_caps" : "VALUE",
     "selected" : "Selected",
-    "fields" : "Fields"
+    "fields" : "Fields",
+    "view_structured_data" : "View Structured Data",
+    "edit" : "Edit"
  }
 }
