rules page outcome column ui changes

--- a/findly-builder/src/assets/i18n/en.json
+++ b/findly-builder/src/assets/i18n/en.json
@@ -99,7 +99,7 @@
         "add_condition": "Add Condition",
         "user_context": "User Context",
         "condition": "Condition",
-        "contains": "Contains",
+        "contains": "Containing",
         "equals": "Equals To",
         "doesNotContain": "Does Not Contain",
         "notEquals": "Not Equals To",
@@ -133,10 +133,10 @@
         "active": "Active",
         "recentPages": "Recent Pages",
         "lowerResults": "Lowering Results by",
-        "actionboost": "Boosting",
-        "actionlower": "Lowering",
-        "actionhide": "Hiding",
-        "actionfilter": "Filtering",
+        "actionboost": "BoostResult",
+        "actionlower": "LowerResult",
+        "actionhide": "HideResult",
+        "actionfilter": "FilterResult",
         "string": "String",
         "date": "Date",
         "number": "Number",
