FLY-864 Most Clicked Positions label spelling issue fixed

--- a/findly-builder/src/assets/i18n/en.json
+++ b/findly-builder/src/assets/i18n/en.json
@@ -278,7 +278,7 @@
             "Appearances": "Appearances",
             "Clicks": "Clicks",
             "Avg_Position": "Avg Position",
-            "Most_Clicked_Position": "Most Clicked Position",
+            "Most_Clicked_Position": "Most Clicked Positions",
             "Feedback_Received": "Feedback  Received",
             "Number_of_Clicks": "Number of Clicks",
             "Feedback": "Feedback",
