--- a/findly-builder/src/assets/i18n/en.json
+++ b/findly-builder/src/assets/i18n/en.json
@@ -390,6 +390,10 @@
         "view_structured_data" : "View Structured Data",
         "edit" : "Edit",
         "updated_by" : "Updated by",
-        "updated_on" : "Last Updated On"
+        "updated_on" : "Last Updated On",
+        "noResultTemplate" : "Result templates are not defined for structured data. Go to",
+        "searchInterfacePath" : "Configs >> Search Interface",
+        "toDefine" : "to define.",
+        "learnMore" : "Learn More"
     }
 }
