FLY-1584 - Moving Test button to top.

--- a/findly-builder/src/assets/i18n/en.json
+++ b/findly-builder/src/assets/i18n/en.json
@@ -83,6 +83,7 @@
     "clear_all": "Clear all",
     "array": "Array",
     "object": "Object",
+    "test" : "Test",
     "businessRules": {
         "rules_selected": "Rules Selected",
         "all_rules_selected": "All Rules Selected",
