bot actions code changes 1.search fields implementation 2.check box implementation 3.selected tasks enable or disble implementation

--- a/findly-builder/src/assets/i18n/en.json
+++ b/findly-builder/src/assets/i18n/en.json
@@ -84,6 +84,11 @@
     "array": "Array",
     "object": "Object",
     "test" : "Test",
+    "botAction":{
+        "disable":"Disable",
+        "enable":"Enable",
+        "tasksSelected":"Tasks Selected"
+    },
     "businessRules": {
         "rules_selected": "Rules Selected",
         "all_rules_selected": "All Rules Selected",
