last update change

--- a/findly-builder/src/assets/i18n/en.json
+++ b/findly-builder/src/assets/i18n/en.json
@@ -250,7 +250,7 @@
     "resultRanking": {
         "no_search_results": "No search results",
         "no._of_customizations_caps": "NO. OF CUSTOMIZATIONS",
-        "last_changes_caps": "LAST CHANGES",
+        "last_changes_caps": "LAST UPDATED",
         "restore": "Reset",
         "pinned": "pinned",
         "past_action_on_this_item_caps": "PAST ACTION ON THIS ITEM",
