Removed Disable for Edit button. Changed Config to Manage in StructuredData.

--- a/findly-builder/src/assets/i18n/en.json
+++ b/findly-builder/src/assets/i18n/en.json
@@ -398,7 +398,7 @@
         "updated_by" : "Updated by",
         "updated_on" : "Last Updated On",
         "noResultTemplate" : "Result templates are not defined for structured data. Go to",
-        "searchInterfacePath" : "Configs >> Search Interface",
+        "searchInterfacePath" : "Manage >> Search Interface",
         "toDefine" : "to define.",
         "learnMore" : "Learn More"
     }
