Fix for FLY-2054.

--- a/findly-builder/src/assets/i18n/en.json
+++ b/findly-builder/src/assets/i18n/en.json
@@ -356,6 +356,7 @@
         "addManually": "Add Manually",
         "delete": "Delete",
         "cancel": "Cancel",
+        "close" : "Close",
         "apply": "Apply",
         "addField": "Add Data",
         "searchFilterDesc": "Eg: field==lastName||(field==FirstName&&field==Age)",
