1. FLY-2136 => Moving Sources in to TopNavigation. 2. Moving Experiments into Analytics. 3. Moving SearchInterface, Result Templates in to Indices (Only UI). 4. Required Fixes for Navigation Changes.

--- a/findly-builder/src/assets/i18n/en.json
+++ b/findly-builder/src/assets/i18n/en.json
@@ -401,7 +401,7 @@
         "updated_by" : "Updated by",
         "updated_on" : "Last Updated On",
         "noResultTemplate" : "Result templates are not defined for structured data. Go to",
-        "searchInterfacePath" : "Manage >> Result Templates",
+        "searchInterfacePath" : "Indices >> Result Templates",
         "toDefine" : "to define.",
         "learnMore" : "Learn More"
     }
