--- a/findly-builder/src/assets/i18n/en.json
+++ b/findly-builder/src/assets/i18n/en.json
@@ -365,7 +365,7 @@
         "configuratoin_success": "Successfully Configured.",
         "configuration_failed": "Configuration Failed",
         "validation_failed" : "Validation Failed",
-        "file_validation_failed" : "Invalid File format.",
+        "file_validation_failed" : "File Validation.",
         "initial_file_validation": "Initial File Validation",
         "import_progress": "Import In-progress",
         "import_done": "Import Done",
