FLY-2101,FLY-2050,FLY-2181,FLY-1558 bugs and improvements code changes

--- a/findly-builder/src/assets/i18n/en.json
+++ b/findly-builder/src/assets/i18n/en.json
@@ -144,7 +144,10 @@
         "actionlower": "Lower",
         "actionhide": "Hide",
         "actionfilter": "Filter",
+        "object": "Object",
+        "dense_vector": "Dense Vector",
         "string": "String",
+        "array": "Array",
         "date": "Date",
         "number": "Number",
         "between": "Between",
