--- a/findly-builder/src/assets/i18n/en.json
+++ b/findly-builder/src/assets/i18n/en.json
@@ -31,6 +31,7 @@
     "value": "Value",
     "range": "Range",
     "choose_an_option": "Choose an option",
+    "choose_stage_type": "Choose Stage Type",
     "count": "Count",
     "page": "Page",
     "faq": "FAQ",
