search insights header renamed  searched intent to search query and removed info icon beside Searched intend

--- a/findly-builder/src/assets/i18n/en.json
+++ b/findly-builder/src/assets/i18n/en.json
@@ -314,6 +314,7 @@
             "Queries_without_results": "Queries without results",
             "Search_Results": "Search Results",
             "Searched_Intent": "Searched Intent",
+            "Search_query": "Search Query",
             "Count": "Count",
             "No_of_Clicks": "No of Clicks",
             "Search_Queries_for": "Search Queries for",
