Fix for Issues : FLY-2279, FLY-2280, FLY-2035

--- a/findly-builder/src/assets/i18n/en.json
+++ b/findly-builder/src/assets/i18n/en.json
@@ -367,7 +367,9 @@
         "searchFilterDesc": "Eg: field==lastName||(field==FirstName&&field==Age)",
         "editFilter": "Edit Filter",
         "configuratoin_progress": "Configuration in Progress...",
+        "validation_progress": "Validation in Progress...",
         "configuratoin_success": "Successfully Configured.",
+        "validation_success": "Successfully Validated",
         "configuration_failed": "Configuration Failed",
         "validation_failed" : "Validation Failed",
         "file_validation_failed" : "File Validation.",
