FLY-2285,FLY-1437,FLY-877 issues fixed

--- a/findly-builder/src/assets/i18n/en.json
+++ b/findly-builder/src/assets/i18n/en.json
@@ -318,6 +318,7 @@
             "Count": "Count",
             "No_of_Clicks": "No of Clicks",
             "Search_Queries_for": "Search Queries for",
+            "Search_Results_for": "Search Results for",
             "Appearances": "Appearances",
             "Click-Through_Rate": "Click-Through Rate",
             "Avg_Position": "Avg Position",
