--- a/findly-builder/src/assets/i18n/en.json
+++ b/findly-builder/src/assets/i18n/en.json
@@ -315,6 +315,7 @@
             "Search_Results": "Search Results",
             "Searched_Intent": "Searched Intent",
             "Search_query": "Search Query",
+            "Search_results": "Search Results",
             "Count": "Count",
             "No_of_Clicks": "No of Clicks",
             "Search_Queries_for": "Search Queries for",
