--- a/findly-builder/src/assets/i18n/en.json
+++ b/findly-builder/src/assets/i18n/en.json
@@ -282,7 +282,7 @@
             "Top_Search_Queries": "Top Search Queries",
             "Top_Search_Queries_with_No_Result": "Top Search Queries with No Result",
             "Top_Search_Results": "Top Search Results",
-            "Searched_Intent": "Search Results",
+            "Searched_Intent": "Query",
             "Count": "Count",
             "Appearances": "Appearances",
             "Clicks": "Clicks",
